implement abstraction layers for browsers, implemented jxbrowser support, implemented jx license build support